base/src/test/resources/failure/holes/pattern-confluence.aya.txt
In file $FILE:6:15 ->

  4 | 
  5 | def add (m n : Nat) : Type
  6 |   | zero, n => n
                     ^^

Error: Cannot check the expression of type
         Nat
         (Normalized: Nat)
       against the type
         Type
         (Normalized: Type)

In file $FILE:7:15 ->

  5 | def add (m n : Nat) : Type
  6 |   | zero, n => n
  7 |   | m, zero => {??}
                     ^--^

Goal: Goal of type
        Type
        (Normalized: Type)
      Context:
        {m : Nat}
        {m : Nat} (not in scope)
        {n : Nat}
      To ensure confluence:
        Given (m ⇒ zero), we should have: <n>
        Given (m ⇒ suc m), we should have: <suc <add m n>>

In file $FILE:8:21 ->

  6 |   | zero, n => n
  7 |   | m, zero => {??}
  8 |   | suc m, n => suc (add m n)
                           ^-----^

Error: Cannot check the expression of type
         Type
         (Normalized: Type)
       against the type
         Nat
         (Normalized: Nat)

In file $FILE:8:16 ->

  6 |   | zero, n => n
  7 |   | m, zero => {??}
  8 |   | suc m, n => suc (add m n)
                      ^----------^

Error: Cannot check the expression of type
         Nat
         (Normalized: Nat)
       against the type
         Type
         (Normalized: Type)

In file $FILE:9:21 ->

  7 |   | m, zero => {??}
  8 |   | suc m, n => suc (add m n)
  9 |   | m, suc n => suc (add m n)
                           ^-----^

Error: Cannot check the expression of type
         Type
         (Normalized: Type)
       against the type
         Nat
         (Normalized: Nat)

In file $FILE:9:16 ->

  7 |   | m, zero => {??}
  8 |   | suc m, n => suc (add m n)
  9 |   | m, suc n => suc (add m n)
                      ^----------^

Error: Cannot check the expression of type
         Nat
         (Normalized: Nat)
       against the type
         Type
         (Normalized: Type)

In file $FILE:7:15 ->

  5 | def add (m n : Nat) : Type
  6 |   | zero, n => n
  7 |   | m, zero => {??}
                     ^--^

Error: Unsolved meta

6 error(s), 0 warning(s).
What are you doing?
